# lutModelInference

./: README.md  pyproject.toml
src/lutinferencemodel/: __init__.py  cli.py  predictor.py  vision.py
src/lutinferencemodel/artifacts/: pca_mean.npy  weight_normalization.json
tests/: test_inference.py
